results/SVCOMP/4-shot/log-classtest1-2024_03_18_13_57_26.txt
public class classtest1 {
  //@ requires c != null;
  public static void main(String[] args) {
    g(classtest1.class);
  }

  //@ requires c != null;
  static void g(Object c) {
    assert true;
  }
}
/home/max/Documents/JMLGPT/tmp/classtest1.java:2: error: cannot find symbol
  //@ requires c != null;
               ^
  symbol:   variable c
  location: class classtest1
1 error

